Bug 362921 - Display of events which span more than one day looks curious in the week view
Summary: Display of events which span more than one day looks curious in the week view
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: agendaview (weekview) (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-11 03:51 UTC by widigoia
Modified: 2016-07-11 06:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.0
Sentry Crash Report:


Attachments
Showing what does happen vs how it could look (104.22 KB, image/png)
2016-05-11 05:21 UTC, widigoia
Details

Note You need to log in before you can comment on or make changes to this bug.
Description widigoia 2016-05-11 03:51:03 UTC
When entering an event which spans more than one day (in this case a night shift from 2200hrs the preceding night to 0730hrs the following day) the weekly view displays a thin line at the start time but does not follow it through to the next day.

We are using version 4:15.12.3-0ubuntu1, which comes with Kubuntu 16.04. Once entered and synced with Android and ownCloud, the event is displayed correctly by those applications.

Reproducible: Always

Steps to Reproduce:
1. Enter event spanning more than one day
2. View it in the weekly view

Actual Results:  
Just a thin line and label at the start time to represent the entry. No sign that the event continues to the next day.

Expected Results:  
To see a block representing the event which runs from the start time to the end time the following day.

I am generally very happy with Korganizer, thanks for all your hard work which you give voluntarily to the KDE project.
Comment 1 widigoia 2016-05-11 05:21:31 UTC
Created attachment 98889 [details]
Showing what does happen vs how it could look

In the image the event for Wednesday the 11th shows only a small line. This is the current behaviour.

To show what could happen, for the following days I have created two events: one for the 12th from 2230-2359hrs and the other for the 13th from 0000-0730hrs.
Comment 2 Raimar Sandner 2016-05-23 19:03:12 UTC
I can confirm this in version 16.04.1.

For an event that spans from 2016-05-22-20:15 to 2016-05-23-02:45 I see two thin entries, similar to the screenshot of #1: one at 2016-05-22-20:15 and one at 2016-05-23-20:15.
Comment 3 Tom Mittelstädt 2016-07-01 09:11:26 UTC
Happens here exactly in the described way, too.

korganizer 5.1.3
Comment 4 Sandro Knauß 2016-07-11 06:35:53 UTC
Git commit 51370c608fc7e94f2f88faeb52c89cabeefbe56d by Sandro Knauß, on behalf of Bastian Köcher.
Committed on 11/07/2016 at 06:31.
Pushed by knauss into branch 'master'.

Fix bug with events ending at midnight

This fixes the bug with events that end at midnight and are displayed
for multiple days.
FIXED-IN: 5.3.0
REVIEW: 128383

M  +34   -0    autotests/testevent.cpp
M  +2    -0    autotests/testevent.h
M  +1    -1    src/event.cpp

http://commits.kde.org/kcalcore/51370c608fc7e94f2f88faeb52c89cabeefbe56d