Fix bug with events ending at midnight

This fixes the bug with events that end at midnight and are displayed
for multiple days.

BUG: 362921
FIXED-IN: 5.3.0
REVIEW: 128383